--- a/Poseiden-skeleton/src/main/resources/application.properties
+++ b/Poseiden-skeleton/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework=INFO
 
 ################### DataSource Configuration ##########################
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Dieumerci80!
 
@@ -11,4 +11,6 @@ spring.datasource.password=Dieumerci80!
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
