--- a/Poseiden-skeleton/src/main/resources/application.properties
+++ b/Poseiden-skeleton/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
+spring.security.oauth2.client.registration.github.client-id=2d1057250f3efcd89a2c
+spring.security.oauth2.client.registration.github.client-secret=77aa673f52beb46c7f6973735927c3fbd1931716
+spring.security.oauth2.client.registration.github.scope=email
