Configuration de la sécurité OAuth2.0

--- a/Poseiden-skeleton/src/main/resources/application.properties
+++ b/Poseiden-skeleton/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=Dieumerci80!
 
 ################### Hibernate Configuration ##########################
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
